<resources>
    <string name="app_name">My Application</string>
    <string name="player1">Player1</string>
    <string name="settings">SETTINGS</string>
    <string name="home">HOME</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="name">Name</string>
    <string name="input_names">INPUT NAMES</string>
    <string name="play">PLAY</string>
    <string name="player2">Player2</string>
</resources>